--- a/src/ui/components/organisms/pokemon-list/styles.css
+++ b/src/ui/components/organisms/pokemon-list/styles.css
@@ -2,6 +2,8 @@
   background: white;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  height: 100%;
+  min-height: 100vh;
 }
 
 .pokemon-list {
