--- a/src/ui/pages/pokemon-detail-page/styles.css
+++ b/src/ui/pages/pokemon-detail-page/styles.css
@@ -1,15 +1,21 @@
 .pokemon-detail-page {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
   padding: 24px 4px;
-  background-image: linear-gradient(
-      135deg,
-      rgba(0, 0, 0, 0.05),
-      rgba(255, 255, 255, 0.05)
-    ),
-    url('../../../assets/Pokeball.svg');
+  position: relative;
+}
+
+.pokemon-detail-container {
+  background-image: url('../../../assets/Pokeball.svg');
   background-repeat: no-repeat;
   background-position: top right;
+}
+
+.pokemon-detail-info {
+  display: flex;
 }
