--- a/src/ui/components/molecules/pokemon-header/styles.css
+++ b/src/ui/components/molecules/pokemon-header/styles.css
@@ -4,6 +4,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  background-image: url('../../../../assets/Pokeball.svg');
+  background-repeat: no-repeat;
+  background-position: top right;
 }
 
 .pokemon-name-detail {
