--- a/src/ui/components/organisms/pokemon-detail-card/styles.css
+++ b/src/ui/components/organisms/pokemon-detail-card/styles.css
@@ -2,9 +2,7 @@
   background: white;
   box-shadow: 0px 1px 3px 1px #00000040 inset;
   border-radius: 8px;
-  height: 100%;
   min-height: 412px;
-  width: 100%;
   min-width: 352px;
   max-width: 352px;
 
@@ -20,6 +18,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  margin-top: 40px;
 }
 
 .about-container {
