--- a/src/ui/components/organisms/pokemon-list/styles.css
+++ b/src/ui/components/organisms/pokemon-list/styles.css
@@ -1,9 +1,10 @@
 .pokemon-list-container {
-  background: white;
-  border-radius: 8px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  height: 100%;
-  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 
 .pokemon-list {
@@ -11,4 +12,12 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 16px 8px;
   padding: 24px 12px;
+  place-items: center;
+  background: white;
+  border-radius: 8px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  overflow: auto;
+  height: 75vh;
+  min-height: 70vh;
+  width: 100%;
 }
