--- a/src/ui/pages/home-page/styles.css
+++ b/src/ui/pages/home-page/styles.css
@@ -1,10 +1,17 @@
 .home-page-container {
-  top: 0;
-  margin: 0;
+  width: 100%;
   background: #dc0a2d;
   padding: 20px 4px;
   height: 100%;
   min-height: 100vh;
+}
+
+.list-container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 70vh;
 }
 
 h1 {
