--- a/src/ui/components/organisms/home-header/styles.css
+++ b/src/ui/components/organisms/home-header/styles.css
@@ -2,9 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 12px;
-  margin-bottom: 24px;
-  padding: 16px;
+  margin-bottom: 8px;
+  padding: 0px 16px 16px 16px;
   width: 100%;
+  min-height: 132px;
 }
 
 .hero-section {
