--- a/src/ui/components/molecules/pokemon-card/styles.css
+++ b/src/ui/components/molecules/pokemon-card/styles.css
@@ -3,7 +3,7 @@
   border-radius: 10px;
   padding: 4px 8px;
   text-align: center;
-  width: 200px;
+  width: 100%;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   background: linear-gradient(to bottom, #fff 60%, #efefef 40%);
